--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
-    "preview": "astro preview",
+    "preview": "bun run ./dist/server/entry.mjs",
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.9.3"
+    "@supabase/supabase-js": "^2.43.4",
+    "astro": "^4.9.3",
+    "astro-bun-adapter": "^1.0.2"
   }
 }
